--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
-#root {
-  width: 100%;
-  margin: 0 auto;
+@import "./styles/theme.css";
+html, body, #root {
+  width: 100% !important;
+  max-width: 100vw;
+  overflow-x: hidden;
+  max-width: 100vw;
+  box-sizing: border-box;
 }
+
 
