--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import "./styles/theme.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,12 +8,4 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-html, body, #root {
-  margin: 0 auto !important;
-  padding: 0 !important;
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
 }
