--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -295,7 +295,7 @@
   @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-6 px-[30px];
 }
 
-/* register  */
+/* register and login */
 .inputCommon {
   @apply w-full border border-gray-300 text-[#999999] text-[14px] rounded px-3 py-3 focus:outline-none focus:ring-2 focus:ring-blue-500;
 }
